--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://NarendraKoya999.github.io/QR-Code-Generator",
   "name": "my-qrcode",
   "version": "0.1.0",
   "private": true,
@@ -19,9 +20,9 @@
     "mochawesome": "^7.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
